--- a/script-reading-demo.html
+++ b/script-reading-demo.html
@@ -112,9 +112,24 @@
                 }
 
                 async function readScriptParallel() {
-                    const audioPromises = script.value.map(line => getAudioForLine(line));
-                    const audioUrls = await Promise.all(audioPromises);
-                    
+                    const maxConcurrent = 3; // 设置最大并发数量
+                    const audioUrls = [];
+                    const queue = [];
+
+                    for (const line of script.value) {
+                        const promise = getAudioForLine(line).then(url => {
+                            audioUrls.push(url);
+                        });
+                        queue.push(promise);
+
+                        if (queue.length >= maxConcurrent) {
+                            await Promise.race(queue);
+                            queue.splice(queue.findIndex(p => p === promise), 1);
+                        }
+                    }
+
+                    await Promise.all(queue);
+
                     for (const url of audioUrls) {
                         await playAudio(url);
                     }
