--- a/script-reading-demo.html
+++ b/script-reading-demo.html
@@ -124,7 +124,7 @@
                     { character: "图尔斯", text: "罗伯特，我们曾是好友，但今天你只是一道阻碍。无法阻止我完成任务！" },
                     { character: "旁白", text: "然而，他的攻击轨迹被罗伯特的灵能造成了干扰，长剑未能命中目标，反而露出了一丝破绽。" },
                     { character: "旁白", text: "这时，灵能的波动在二人之间弥漫，空气中充满了近乎凝固的紧张。罗伯特在躲避攻击的同时，发现自己敏锐的反应逐渐被敌人的异能所影响，意识到对方的异能并不简单。他趁机向前一步，运用流转的灵能再次调整打击姿态，试图给图尔斯施加压力。图尔斯则在这番失衡中感受到了紧迫感，灵力的消耗让他不得不在心中警惕，战斗的转折似乎就在眼前。" },
-                    { character: "旁白", text: "以上是剧本朗读演示，想体验更多精彩的文字剧游戏吗？快来bb.tobenot.top/main，我们的大模型剧本杀等你来玩！" }
+                    { character: "旁白", text: "以上是剧本朗读演示，想体验更多精彩的跑团游戏吗？快来bb.tobenot.top/main，我们的大模型剧本杀等你来玩！" }
                 ]);
                 const parallelReading = ref(true); // 将初始值设置为 true
 
