feat: longer script

--- a/script-reading-demo.html
+++ b/script-reading-demo.html
@@ -124,7 +124,14 @@
                     { character: "图尔斯", text: "罗伯特，我们曾是好友，但今天你只是一道阻碍。无法阻止我完成任务！" },
                     { character: "旁白", text: "然而，他的攻击轨迹被罗伯特的灵能造成了干扰，长剑未能命中目标，反而露出了一丝破绽。" },
                     { character: "旁白", text: "这时，灵能的波动在二人之间弥漫，空气中充满了近乎凝固的紧张。罗伯特在躲避攻击的同时，发现自己敏锐的反应逐渐被敌人的异能所影响，意识到对方的异能并不简单。他趁机向前一步，运用流转的灵能再次调整打击姿态，试图给图尔斯施加压力。图尔斯则在这番失衡中感受到了紧迫感，灵力的消耗让他不得不在心中警惕，战斗的转折似乎就在眼前。" },
-                    { character: "旁白", text: "以上是剧本朗读演示，想体验更多精彩的跑团游戏吗？快来bb.tobenot.top/main，我们的大模型剧本杀等你来玩！" }
+                    { character: "罗伯特", text: "图尔斯，你的决心我能理解，但这不是你想象的那样简单。闯过我这一关，后面还有更多等待你。" },
+                    { character: "旁白", text: "罗伯特站立不动，凝视着图尔斯，声音如同低沉的鼓声。他的话透着一种坚定与诚恳，似乎希望能够唤醒两人曾经的友情。然而，图尔斯心意已决，目光中闪烁着锋利的光芒，毫不理会罗伯特的劝说。" },
+                    { character: "图尔斯", text: "罗伯特！我无法退缩，完成任务是我的使命。" },
+                    { character: "旁白", text: "图尔斯的声音高亢响亮，带着一丝愤怒与绝决。他握紧手中的钢铁长剑，强烈的异能围绕在他的身边，如同锋利的刀刃。他的身形加速逼近，猛然挥出长剑，剑光如虹，试图突破罗伯特的防线。然而，当长剑划过空气时，罗伯特运起【苍穹缝隙】的异能，瞬间产生的灵能波动让图尔斯的攻击失去精确，长剑偏离了轨迹，在罗伯特的身旁劈空而过。" },
+                    { character: "旁白", text: "图尔斯的攻击未能成功，反而在这一瞬间露出了防守的破绽。罗伯特把握住机会，借助灵能的力量再度反击，重重一击朝着图尔斯的方向挥出。他用尽全力，试图将图尔斯击退。" },
+                    { character: "罗伯特", text: "这是做不到的，图尔斯！" },
+                    { character: "旁白", text: "他的话语中透着力量与决心。图尔斯来不及反应，灵能盾在那一击中瞬间出现细微的裂痕，强大的冲击力让他向后退去，心中闪过一丝惊愕，意识到这场战斗的艰辛超出了他的预期。" },
+                    { character: "旁白", text: "以上是剧本朗读演示，想体验更多精彩的跑团游戏吗？快来bb.tobenot.top/main，我们的AI剧本杀等你来玩！" }
                 ]);
                 const parallelReading = ref(true); // 将初始值设置为 true
 
